# meteo_cab

./: .gitignore  BetterVtkSlicer.h  CMakeLists.txt  LIC_builder.cpp  LIC_visualize.cpp  MeteoAppLauncher.cpp  MeteoCabApp.h  PlaneWidgetInteraction.h  README.md  Teddy_128_128_62.mhd  dataSetDefinitions.h  ground_generation.cpp  meteocab.cpp  old_README.md  pressure_iso.cpp  resampling.cpp  slicer_pressure.cpp  streamline_functions.h  terrainVis.cpp  utils.h  vtkEasyTransfer.hpp  wind_2d.cpp  wind_2d_dummy.cpp
data/: 2d_velocity.vti  2d_wind_full.pvsm  cloudyness.mhd  cloudyness.pvsm  height2.txt  pres_morse_smale.pvsm  pressure_slice.vti  sampling_height.txt  vorticity_divergence_streamlines_pres.pvsm
